docs: change some request body and response body
