# docs/swagger.yml
@@ -3042,7 +3042,7 @@ paths:
                     items:
                       type: object
                       properties:
-                        video_categories:
+                        content_categories:
                           type: array
                           items:
                             type: object
@@ -3050,7 +3050,7 @@ paths:
                               name:
                                 type: string
                                 example: "tips"
-                        trash_categories:
+                        waste_categories:
                           type: array
                           items:
                             type: object
@@ -3101,7 +3101,7 @@ paths:
                     link_video:
                       type: string
                       example: "https://example.com/video.mp4"
-                    video_categories:
+                    content_categories:
                       type: array
                       items:
                         type: object
@@ -3109,7 +3109,7 @@ paths:
                           name:
                             type: string
                             example: "tips"
-                    trash_categories:
+                    waste_categories:
                       type: array
                       items:
                         type: object      
@@ -3286,7 +3286,7 @@ paths:
                       viewer:
                         type: integer
                         example: 1000
-                      video_categories:
+                      content_categories:
                         type: array
                         items:
                           type: object
@@ -3294,7 +3294,7 @@ paths:
                             name:
                               type: string
                               example: "tips"
-                      trash_categories:
+                      waste_categories::
                         type: array
                         items:
                           type: object
@@ -3351,7 +3351,7 @@ paths:
                     link_video:
                       type: string
                       example: "https://example.com/video.mp4"
-                    video_categories:
+                    content_categories:
                       type: array
                       items:
                         type: object
@@ -3359,7 +3359,7 @@ paths:
                           name:
                             type: string
                             example: "tips"
-                    trash_categories:
+                    waste_categories:
                       type: array
                       items:
                         type: object      
@@ -3490,6 +3490,28 @@ paths:
                         viewer:
                           type: integer
                           example: 1000
+                        content_categories:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                                example: 1
+                              name:
+                                type: string
+                                example: "tips"
+                        waste_categories:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              id:
+                                type: integer
+                                example: 1
+                              name:
+                                type: string
+                                example: "berbahaya"
         '500':
           description: Status internal error'
           content:
@@ -3507,20 +3529,20 @@ paths:
     get:
       tags:
         - user videos
-      summary: Search Videos by title
-      description: Searches for videos that match a specific title
-      operationId: getVideosBytitle
+      summary: Search Videos by keyword
+      description: Searches for videos that match a specific keyword
+      operationId: getVideosBykeyword
       parameters:
         - in: query
-          name: title
+          name: keyword
           required: true
           schema:
             type: string
             example: plastik
-          description: The title to search for videos.
+          description: The keyword to search for videos.
       responses:
         '200':
-          description: Get all data by title
+          description: Get all data by keyword
           content:
             application/json:
               schema:
@@ -3546,8 +3568,30 @@ paths:
                     viewer:
                       type: integer
                       example: 1000
-        '500':
-          description: Status internal error'
+                    content_categories:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            example: 1
+                          name:
+                            type: string
+                            example: "tips"
+                    waste_categories:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                            example: 1
+                          name:
+                            type: string
+                            example: "plastik"
+        '404':
+          description: Video not found
           content:
             application/json:
               schema:
@@ -3555,10 +3599,12 @@ paths:
                 properties:
                   code:
                     type: integer
-                    example: 500
+                    example: 404
                   message:
                     type: string
-                    example: internal server error
+                    example: video not found
+
+        
   /video/{videoId}:
     get:
       tags:
@@ -3681,17 +3727,23 @@ paths:
                   message:
                     type: string
                     example: video not found
-  /videos/content-category:
+  /videos/category:
     get:
       tags:
         - user videos
-      summary: Get all video by content category
-      description: Enpoint for user get all video by content categories
+      summary: Get all video by content category or waste category
+      description: Enpoint for user get all video by content category or waste category
       operationId: getContentCategories
       security:
         - Bearer: []
       parameters:
-        - name: query
+        - name: type
+          in: query
+          required: true
+          schema:
+            type: string
+            example: "content"
+        - name: name
           in: query
           required: true
           schema:
@@ -3739,7 +3791,7 @@ paths:
                               viewer:
                                 type: integer
                                 example: 1000
-                              video_categories:
+                              content_categories:
                                 type: array
                                 items:
                                   type: object
@@ -3750,7 +3802,7 @@ paths:
                                     name:
                                       type: string
                                       example: "tips"
-                              trash_categories:
+                              waste_categories:
                                 type: array
                                 items:
                                   type: object
@@ -3762,7 +3814,7 @@ paths:
                                       type: string
                                       example: "berbahaya"
         '404':
-          description: Content category not found
+          description: video not found
           content:
             application/json:
               schema:
@@ -3773,102 +3825,8 @@ paths:
                     example: 404
                   message:
                     type: string
-                    example: content category not found
+                    example: video not found
                   
-    
-  /videos/trash-category:
-      get:
-        tags:
-          - user videos
-        summary: Get all video by trash category
-        description: Enpoint for user get all video by trash categories
-        operationId: getTrashCategories
-        security:
-          - Bearer: []
-        parameters:
-          - name: query
-            in: query
-            required: true
-            schema:
-              type: string
-              example: "berbahaya"
-        responses:
-          '200':
-            description: Success
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    code:
-                      type: integer
-                      example: 200
-                    message:
-                      type: string
-                    data:
-                      type: array
-                      items:
-                        type: object
-                        properties:
-                          data_video:
-                            type: array
-                            items:
-                              type: object
-                              properties:
-                                id:
-                                  type: integer
-                                  example: 1
-                                title:
-                                  type: string
-                                  example: "Video Title"
-                                description:
-                                  type: string
-                                  example: "Video Description"
-                                url_thumbnail:
-                                  type: string
-                                  example: "https://example.com/thumbnail.jpg"
-                                link_video:
-                                  type: string
-                                  example: "https://example.com/video.mp4"
-                                viewer:
-                                  type: integer
-                                  example: 1000
-                                video_categories:
-                                  type: array
-                                  items:
-                                    type: object
-                                    properties:
-                                      id:
-                                        type: integer
-                                        example: 1
-                                      name:
-                                        type: string
-                                        example: "tips"
-                                trash_categories:
-                                  type: array
-                                  items:
-                                    type: object
-                                    properties:
-                                      id:
-                                        type: integer
-                                        example: 1
-                                      name:
-                                        type: string
-                                        example: "berbahaya"
-          '404':
-            description: Trash category not found
-            content:
-              application/json:
-                schema:
-                  type: object
-                  properties:
-                    code:
-                      type: integer
-                      example: 404
-                    message:
-                      type: string
-                      example: trash category not found
-
   /videos/content-categories:
     get:
       tags:
@@ -3901,7 +3859,7 @@ paths:
                           type: string
                           example: "tips"
 
-  /videos/trash-categories:
+  /videos/waste-categories:
     get:
       tags:
         - user videos
